cleaned up CalSciFunctions